2012-08-21  Ingo Renner  <ingo.renner@dkd.de>

	! [TEMPLATE] Changed the relevance view helpers to take the whole result document as argument (instead of just the score)
	! [API] Moved hook modifySearchQuery to tx_solr_Search

	* Refactoring: Extracted several search components to separate classes

	* Added class tx_solr_Typo3Environment
	* Added helper methods for file indexing
	* Removed unnecessary file path prefixes for hooks where classes can leverage the autoloader
	* Moved facetting initialization from pi_results to faceting query modifier
	* Added interface tx_solr_SearchComponent
	* Added interface tx_solr_QueryAware
	* Added a search component manager
	* Changed phpDoc of tx_solr_ResponseProcessor->processResponse() to indicate that it should return void
	* Added tx_solr_Search->getSolrConnection()
	* Removed option markResultTypeBoundaries, replaced by native grouping in EXT:solrgrouping
	* Added passing of whole objects/arrays in template loops

2012-07-27  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed a bug with Index Queue initialization for mount pages
	* Fixed bug #39301: Language check in install shell script fails

2012-07-24  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed the download URL for Apache Solr 3.5 since it has been removed from Apache mirrors

2012-07-20  Ingo Renner  <ingo.renner@dkd.de>

	* Release of v2.2.0

	!! Renamed tx_solr_FacetRenderer::getFacet() to getFacetProperties()

	! Added method getFacetInternalType() in interface tx_solr_FacetRenderer
	! Renamed tx_solr_facet_Facet::getOptions() to getOptionsRaw()
	! Renamed tx_solr_Search::getFacetRangeOptions() to getFacetRangeOptions()
	! API cleanup
		* Changed tx_solr_pluginbase_PluginBase::performAction() to be abstract
		* Added missing abstract tx_solr_pluginbase_PluginBase::render()
	! Removed the default language filter 
		* It is advised to have a separate core/index for each language due to different stemming per language