@@ -2,6 +2,7 @@
 
 	! [TEMPLATE] Changed the relevance view helpers to take the whole result document as argument (instead of just the score)
 	! [API] Moved hook modifySearchQuery to tx_solr_Search
+	! [API] cleanup: Changed tx_solr_Search->getResponse() to return instance of Apache_Solr_Response as mentioned in phpDoc
 
 	* Refactoring: Extracted several search components to separate classes
 
